fix techlist overflow

--- a/Tec/techNote.scss
+++ b/Tec/techNote.scss
@@ -1,3 +1,7 @@
+section{
+    min-height: 100vh;
+    height: auto;
+}
 article {
     width: 85%;
     margin: 0 auto;
