--- a/proFile.scss
+++ b/proFile.scss
@@ -147,7 +147,7 @@ article {
     .tendency,
     .strength {
         width: 45%;
-        height: 50%;
+        height: 60%;
         padding: 50px;
         border-radius: 25px;
 
@@ -155,7 +155,7 @@ article {
             margin-top: 10%;
             background-color: white;
             border-radius: 25px;
-            height: 50%;
+            height: auto;
             align-content: center;
         }
 
